tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_10.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  y := ((((q MOD 2) DIV (+ 1223)) + ((200 + 200) MOD (200 DIV x))) MOD (((z MOD x) + (+ 200)) * (- (1223 * 0))));
               p := ((- ((2 * 200) DIV (2 MOD y))) < (- ((+ 1) * (1223 * 0))));
               q := ((+ ((x - 0) + (y + y))) = (+ (+ (+ 1223))));
               x := (((- (2 - 0)) DIV (+ (+ z))) MOD (((+ 0) DIV (200 - 1)) - ((2 + 1223) + (200 DIV y))));
               z := ((((1 DIV y) - (- 1)) DIV ((1 * 1223) MOD (0 * 2))) - (((2 DIV 200) DIV (z DIV x)) DIV (- (0 DIV 2))));
               p := ((((+ 200) DIV (1 - y)) * (+ (1223 MOD y))) < (- (- (0 + 2))));
               x := ((+ ((- 2) MOD (x DIV z))) MOD ((- (y DIV z)) DIV ((+ z) * (- z))));
               y := (- (- ((1 * x) + (2 DIV 2))));
               y := ((((0 MOD 2) - (0 DIV 200)) * (+ (2 * 2))) * (((y + 200) - (x DIV 2)) + ((1 DIV z) MOD (1223 * 2))));
               p := ((+ (- (0 + 1223))) # (- (+ (x * 1223))))
END Test11.